--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -113,3 +113,8 @@ logging:
 
 bitrix24:
   webhook-url: "https://b24-mvtnvt.bitrix24.kz/rest/1/n7jy59tgz5tnu571/"
+
+
+file:
+  directory:
+    link: "C:/WORK/file/"
